RESOLVED FIXED163935
IDBObjectStore.createIndex() should take a union in parameter
https://bugs.webkit.org/show_bug.cgi?id=163935
Summary IDBObjectStore.createIndex() should take a union in parameter
Chris Dumez
Reported 2016-10-24 22:48:08 PDT
IDBObjectStore.createIndex() should take a union in parameter: - https://www.w3.org/TR/IndexedDB/#idl-def-IDBObjectStore
Attachments
WIP patch (9.55 KB, patch)
2016-10-24 22:49 PDT, Chris Dumez
no flags
Patch (10.30 KB, patch)
2016-10-25 09:57 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-10-24 22:49:33 PDT
Created attachment 292722 [details] WIP patch
WebKit Commit Bot
Comment 2 2016-10-24 22:51:30 PDT
Attachment 292722 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBObjectStore.h:33: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3 2016-10-25 09:57:39 PDT
Darin Adler
Comment 4 2016-10-25 11:07:06 PDT
Comment on attachment 292767 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=292767&action=review > Source/WebCore/Modules/indexeddb/IDBKeyPath.h:37 > +bool isIDBKeyPathValid(const IDBKeyPathVariant&); OK, maybe we won’t be getting rid of this header.
WebKit Commit Bot
Comment 5 2016-10-25 12:20:27 PDT
Comment on attachment 292767 [details] Patch Clearing flags on attachment: 292767 Committed r207832: <http://trac.webkit.org/changeset/207832>
WebKit Commit Bot
Comment 6 2016-10-25 12:20:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.